--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <h1>Tareas</h1>
         <input
           class="new-todo"
-          placeholder="¿Qué necesita ser hecho?"
+          placeholder="¿Cúal es la tarea de hoy?"
           autofocus
         />
       </header>
@@ -65,7 +65,7 @@
         Template creado por <a href="http://sindresorhus.com">Sindre Sorhus</a>
       </p>
       <!-- Change this out with your name and url ↓ -->
-      <p>Creado por <a href="http://todomvc.com">ti</a></p>
+      <p>Creado por <a href="http://todomvc.com">hectorixd</a></p>
       <p>Parte de <a href="http://todomvc.com">TodoMVC</a></p>
     </footer>
   </body>
